[package]
edition = "2021"
name = "tui-elm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
crossterm = {version = "0.26.0", features = ["event-stream"]}
futures = "0.3.26"
thiserror = "1.0.38"
tokio = {version = "1.25.0", features = ["sync", "rt-multi-thread", "macros"]}
tui = "0.19.0"
