[package]
edition = "2021"
name = "elm-ui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.2"
async-trait = "0.1.64"
crossterm = {version = "0.25", features = ["event-stream"], optional = true}
futures = "0.3.26"
pin-project-lite = "0.2.9"
thiserror = "1.0.38"
tokio = {version = "1.25.0", features = ["sync", "rt-multi-thread", "macros"]}
tokio-util = "0.7.7"

[dev-dependencies]
derive_more = {version = "0.99.17", default_features = false, features = ["try_into"]}
tokio = {version = "1.25.0", features = ["sync", "rt-multi-thread", "macros", "time"]}
tui = "0.19.0"
