[package]
edition = "2024"
name = "elm-ui-tester"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
elm-ui = { path = "../elm-ui", features = ["crossterm"] }
tokio = { version = "1.37.0", features = ["time", "rt-multi-thread"] }
tokio-util = "0.7.10"
ratatui = { version = "0.30", optional = true }

[features]
crossterm = ["dep:crossterm"]
tui = ["ratatui"]
