[package]
authors = ["Austin Schey <aschey13@gmail.com>"]
description = "Elm architecture framework for UIs"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "elm-ui"
readme = "README.md"
repository = "https://github.com/aschey/elm-ui-rs"
version = "0.0.1-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.2"
async-trait = "0.1.64"
crossterm = {version = "0.25", features = ["event-stream"], optional = true}
futures = "0.3.26"
pin-project-lite = "0.2.9"
thiserror = "1.0.38"
tokio = {version = "1.25.0", features = ["sync", "rt-multi-thread", "macros"]}
tokio-util = "0.7.7"

[dev-dependencies]
derive_more = {version = "0.99.17", default_features = false, features = ["try_into"]}
tokio = {version = "1.25.0", features = ["sync", "rt-multi-thread", "macros", "time"]}
tui = "0.19.0"

[features]
crossterm = ["dep:crossterm"]
