[package]
authors = ["Austin Schey <aschey13@gmail.com>"]
description = "Elm architecture framework for UIs"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "elm-ui"
readme = "README.md"
repository = "https://github.com/aschey/elm-ui-rs"
version = "0.0.2-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.0"
async-trait = "0.1.79"
crossterm = { version = "0.27.0", features = ["event-stream"], optional = true }
futures = "0.3.30"
pin-project-lite = "0.2.14"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["sync", "rt-multi-thread", "macros"] }
tokio-util = "0.7.10"

[dev-dependencies]
derive_more = { version = "0.99.17", default_features = false, features = [
    "try_into",
] }
tokio = { version = "1.37.0", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "time",
] }
ratatui = "0.26.1"

[features]
crossterm = ["dep:crossterm"]
