[package]
edition = "2021"
name = "fltk_example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elm-ui = {path = "../..", default-features = false}
fltk = "1.3.31"
tokio = {version = "1.25.0", features = ["sync", "rt-multi-thread", "macros", "time"]}
