[package]
edition = "2021"
name = "termion_example"
version = "0.1.0"

[dependencies]
termion = {version = "1.5"}
tokio = {version = "1.25.0", features = ["sync", "rt-multi-thread", "macros"]}
tui = {version = "0.19.0", default-features = false, features = ["termion"]}
tui-elm = {path = "../..", default-features = false, features = ["termion"]}
