[package]
edition = "2021"
name = "crossterm_example"
version = "0.1.0"

[dependencies]
crossterm = {version = "0.25", features = ["event-stream"]}
elm-ui = {path = "../..", default-features = false, features = ["crossterm"]}
tokio = {version = "1.25.0", features = ["sync", "rt-multi-thread", "macros"]}
tui = {version = "0.19.0"}
