[package]
edition = "2024"
name = "fltk_example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elm-ui = { path = "../.." }
fltk = "1.5.10"
tokio = { version = "1.47.0", features = [
  "sync",
  "rt-multi-thread",
  "macros",
  "time",
] }
