[package]
edition = "2021"
name = "termion_example"
version = "0.1.0"

[dependencies]
elm-ui = { path = "../.." }
termion = { version = "3.0.0" }
tokio = { version = "1.37.0", features = ["sync", "rt-multi-thread", "macros"] }
ratatui = { version = "0.26.1", default-features = false, features = [
    "termion",
] }
