[package]
edition = "2024"
name = "termion_example"
version = "0.1.0"

[dependencies]
elm-ui = { path = "../.." }
termion = { version = "4.0.5" }
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread", "macros"] }
ratatui = { version = "0.29.0", default-features = false, features = [
  "termion",
] }
